# gfxProgXam

./: CMakeLists.txt  README.md
include/: constants.h  game.h  maploader.h  mapobj.h  objmodel.h  player.h  renderer.h  shader.h  texture.h  wallobj.h  window.h
resources/Shaders/: fragment.frag  vertex.vert
resources/levels/: level0  level1
src/: constants.cpp  game.cpp  main.cpp  maploader.cpp  objmodel.cpp  player.cpp  renderer.cpp  shader.cpp  texture.cpp  wallobj.cpp  window.cpp
